Adding SegmentDirectory